--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@
                                         <div class="text-center">
                                             <ul class="list-inline chart-detail-list">
                                                 <li class="list-inline-item">
-                                                    <h5><i class="fa fa-circle m-r-5" style="color: #36404a;"></i>Rate</h5>
+                                                    <h5><i class="fa fa-circle m-r-5" style="color: #36404a;"></i>Rate Watch</h5>
                                                 </li>
                                                 <li class="list-inline-item">
-                                                    <h5><i class="fa fa-circle m-r-5" style="color: #81c868;"></i>Credit</h5>
+                                                    <h5><i class="fa fa-circle m-r-5" style="color: #81c868;"></i>Credit Watch</h5>
                                                 </li>
                                                 <li class="list-inline-item">
-                                                    <h5><i class="fa fa-circle m-r-5" style="color: #5d9cec;"></i>Equity</h5>
+                                                    <h5><i class="fa fa-circle m-r-5" style="color: #5d9cec;"></i>Equity Watch</h5>
                                                 </li>
                                             </ul>
                                         </div>
