--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                         <div class="col-xl-4">
                             <div class="card-box">
                                 <div class="">
-                                    <h4 class="m-b-20 header-title"><b>Activities</b></h4>
+                                    <h4 class="m-b-20 header-title"><b>Activity Log</b></h4>
                                     <div class="nicescroll p-l-r-10" style="max-height: 555px;">
                                         <div class="timeline-2">
                                             <div class="time-item">
@@ -397,7 +397,7 @@
                         <div class="col-lg-4">
                             <div class="card-box">
                                 <a href="#" class="pull-right btn btn-default btn-sm waves-effect waves-light">Add New</a>
-                                <h4 class="text-dark header-title m-t-10">Notes</h4>
+                                <h4 class="text-dark header-title m-t-10">Note History</h4>
                                 <ul class="sortable-list taskList list-unstyled m-t-20" id="upcoming">
                                     <li class="task-warning" id="task1">
                                         <div class="checkbox checkbox-custom checkbox-single pull-right">
