--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         </div>
                         <div class="col-4">
                                 <div class="card-box">
-                                    <h4 class="m-b-20 header-title"><b>Property</b></h4>
+                                    <h4 class="m-b-20 header-title"><b>Properties</b></h4>
                                     <div class="table-rep-plugin">
                                         <div class="table-responsive" data-pattern="priority-columns">
                                             <table id="tech-companies-1" class="table  table-striped">
