--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112852518-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112852518-2');
+</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
@@ -112,11 +121,6 @@
                     </li>
                 </ul>
                 <ul class="list-inline menu-left mb-0">
-                    <li class="float-left">
-                        <button class="button-menu-mobile open-left waves-light waves-effect">
-                            <i class="dripicons-menu"></i>
-                        </button>
-                    </li>
                     <li class="hide-phone app-search">
                         <form role="search" class="">
                             <input type="text" placeholder="Search..." class="form-control">
