--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-4">
                                 <div class="card-box">
                                     <h4 class="m-b-20 header-title"><b>Properties</b></h4>
                                     <div class="table-rep-plugin">
