--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-xl-4">
                             <div class="card-box">
                                 <a href="#" class="pull-right btn btn-default btn-sm waves-effect waves-light">Add New</a>
                                 <h4 class="text-dark header-title m-t-10">Note History</h4>
@@ -461,7 +461,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-xl-4">
                                 <div class="card-box">
                                     <h4 class="m-b-20 header-title"><b>Properties</b></h4>
                                     <div class="table-rep-plugin">
