--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- LOGO -->
             <div class="topbar-left">
                 <div class="text-center">
-                    <a href="index.html" class="logo">Sales Boomerang</a>
+                    <a href="index.html" class="logo"><i class="icon-magnet icon-c-logo"></i><span>Sales Boomerang</span></a>
                     <!-- Image Logo here -->
                     <!--<a href="index.html" class="logo">-->
                     <!--<i class="icon-c-logo"> <img src="assets/images/logo_sm.png" height="42"/> </i>-->
